# AskArtemii-VK-2025

./: .env  .gitignore  README.md  db_helper.py  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 051e48bf356b_add_check.py  3d71ffbb0244_add_answers_like.py  8e590272304e_add_dislike_count_and_like_count.py  9545963c7920_add_ts_search.py  ea09d94fd740_init1.py  ec47f400dd78_add_grade.py  f25730346ac7_add_answer_likes.py
app/: .env  deps.py
app/config/: config.py
app/core/: config.py  db.py  redis.py
app/entities/: answers.py  base.py  error.py  questions.py  users.py
app/handlers/: autho.py  centrifugo.py  deps.py  grade.py  questions.py  users.py
app/lib/: cache.py  fiels_utils.py  log.py  pagination.py  parser.py  password.py  random_.py  templating.py  utils.py
app/models/: __init__.py  answers.py  base.py  grade.py  likes.py  questions.py  tags.py  users.py
app/repository/: __init__.py  crud.py  events.py  mock_crud.py
app/routers/: questions.py  routers.py
app/schemas/: answers.py  grade.py  mixin.py  questions.py  tags.py  user.py  users.py
app/services/: questions.py
app/templates/: ask.html  base.html  form.html  hot_questions.html  index.html  login.html  pagination.html  question.html  signup.html  tags_questions.html  user.html
app/views/: autho.py  base.py  grade.py  (+4 more)
centrifugo/: config.json
cron/: __init__.py  config.py
nginx/: nginx.conf
scripts/: asgi.py  db_helper.py  main.py  run_cron.py  wsgi.py
static/: correct_answer.js  grade.js  index.css  realtime_question.js
wsgi/: test.py
(+26 files in other folders)
